Add: complete api of device module
