# apps/server/src/modules/device/device.controller.ts
@@ -2,7 +2,7 @@ import {
   Body, Controller, Delete, Get, Inject, Patch, Post, Query,
 } from '@nestjs/common'
 import { GetUser } from '@otl/server-nest/common/decorators/get-user.decorator'
-import { INotification } from '@otl/server-nest/common/interfaces/INotification'
+import { IDevice } from '@otl/server-nest/common/interfaces/INotification'
 import { DEVICE_IN_PORT, DeviceInPort } from '@otl/server-nest/modules/device/domain/device.in.port'
 import { StatusCodes } from 'http-status-codes'
 
@@ -19,19 +19,26 @@ export class DeviceController {
   @Post('/')
   public async registerDevice(
     @GetUser() user: any,
-    @Body() registerDeviceDto: INotification.IDevice.RegisterDeviceDto,
-  ): Promise<INotification.IDevice.Response.DeviceResponseDto> {
+    @Body() registerDeviceDto: IDevice.RegisterDeviceDto,
+  ): Promise<IDevice.Response.DeviceResponseDto> {
     const {
-      deviceToken, deviceType, deviceOsVersion, appVersion,
+      deviceToken, deviceType, deviceOsVersion, appVersion, isActive,
     } = registerDeviceDto
-    return await this.notificationInPort.registerDevice(user.id, deviceToken, deviceType, deviceOsVersion, appVersion)
+    return await this.notificationInPort.registerDevice(
+      user.id,
+      deviceToken,
+      isActive,
+      deviceType,
+      deviceOsVersion,
+      appVersion,
+    )
   }
 
   @Delete('/')
   public async unregisterDevice(
     @GetUser() user: any,
-    @Query() unregisterDeviceDto: INotification.IDevice.UnregisterDeviceDto,
-  ): Promise<INotification.IDevice.Response.DeviceResponseDto> {
+    @Query() unregisterDeviceDto: IDevice.UnregisterDeviceDto,
+  ): Promise<IDevice.Response.DeviceResponseDto> {
     const { deviceToken } = unregisterDeviceDto
     const device = await this.notificationInPort.checkExistDevice(deviceToken)
     if (device == null) {
@@ -42,7 +49,7 @@ export class DeviceController {
   }
 
   @Get('/')
-  public async getDevice(deviceToken: string): Promise<INotification.IDevice.Response.UserDeviceResponseDto | null> {
+  public async getDevice(deviceToken: string): Promise<IDevice.Response.UserDeviceResponseDto | null> {
     const device = await this.notificationInPort.checkExistDevice(deviceToken)
     if (device == null) {
       throw new UserException(StatusCodes.NOT_FOUND, UserException.DEVICE_NOT_FOUND, getCurrentMethodName())
@@ -51,9 +58,7 @@ export class DeviceController {
   }
 
   @Get('/user')
-  public async getUserDevice(
-    @GetUser() user: any,
-  ): Promise<INotification.IDevice.Response.UserDeviceResponseDto[] | null> {
+  public async getUserDevice(@GetUser() user: any): Promise<IDevice.Response.UserDeviceResponseDto[] | null> {
     const devices = await this.notificationInPort.getDeviceToken(user.id)
     if (devices == null) {
       throw new UserException(StatusCodes.NOT_FOUND, UserException.DEVICE_NOT_FOUND, getCurrentMethodName())
@@ -64,17 +69,17 @@ export class DeviceController {
   @Patch('/')
   public async updateDevice(
     @GetUser() user: any,
-    @Body() updateDeviceDto: INotification.IDevice.UpdateDeviceDto,
-  ): Promise<INotification.IDevice.Response.UserDeviceResponseDto> {
+    @Body() updateDeviceDto: IDevice.UpdateDeviceDto,
+  ): Promise<IDevice.Response.UserDeviceResponseDto> {
     const {
-      deviceToken, deviceOsVersion, appVersion, active,
+      deviceToken, deviceOsVersion, appVersion, isActive,
     } = updateDeviceDto
     const device = await this.notificationInPort.checkExistDevice(deviceToken)
     if (device == null) {
       throw new UserException(StatusCodes.NOT_FOUND, UserException.DEVICE_NOT_FOUND, getCurrentMethodName())
     }
 
-    if (active) {
+    if (isActive) {
       await this.notificationInPort.makeDeviceTokenActive(user.id, deviceToken)
     }
     else {
@@ -83,6 +88,7 @@ export class DeviceController {
     return await this.notificationInPort.registerDevice(
       user.id,
       deviceToken,
+      isActive,
       device.deviceType,
       deviceOsVersion,
       appVersion,
